[tool.poetry]
name = "djongo_legal"
version = "0.1.0"
description = ""
authors = ["한만철 <manuel71.sj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pymongo = "^4.5.0"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
